--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -6,132 +6,151 @@ on:
       - master
 
 jobs:
+  tag_generator:
+    name: Tag Generator
+    runs-on: ubuntu-latest
+    outputs:
+      new-tag: ${{ steps.tag_version.outputs.new_tag  }}
+    steps:   
+      - name: Automatic Tag (Bump version and push tag)
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release_branches : "master,main,develop"
+
   build_ca_docker_image:
-      name: CA - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Build CA docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ca.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ca:${{ github.sha }}
-            lamassuiot/lamassu-ca:latest
-          push: true
+    name: CA - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+      - tag_generator
+    steps:        
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Build CA docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/ca.dockerfile
+        build-args: |
+          BASE_IMAGE=alpine:3.14
+        tags: |
+          lamassuiot/lamassu-ca:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassu-ca:latest
+        push: true
 
   build_device_manager_docker_image:
-      name: Device Manager - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    name: Device Manager - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+    - tag_generator
+    steps:
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Device Manager docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/device-manager.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassuice-manager:${{ github.sha }}
-            lamassuiot/lamassuice-manager:latest
-          push: true
+    - name: Build Device Manager docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/device-manager.dockerfile 
+        build-args: |
+          BASE_IMAGE=alpine:3.14
+        tags: |
+          lamassuiot/lamassuice-manager:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassuice-manager:latest
+        push: true
 
   build_dms_enroller_docker_image:
-      name: DMS Enroller - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    name: DMS Enroller - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+    - tag_generator
+    steps:
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DMS Enroller docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/dms-enroller.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-dms-enroller:${{ github.sha }}
-            lamassuiot/lamassu-dms-enroller:latest
-          push: true
+    - name: Build DMS Enroller docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/dms-enroller.dockerfile
+        build-args: |
+          BASE_IMAGE=alpine:3.14
+        tags: |
+          lamassuiot/lamassu-dms-enroller:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassu-dms-enroller:latest
+        push: true
 
   build_ocsp_docker_image:
-      name: OCSP - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    name: OCSP - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+    - tag_generator
+    steps:
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build OCSP docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ocsp.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ocsp:${{ github.sha }}
-            lamassuiot/lamassu-ocsp:latest
-          push: true
+    - name: Build OCSP docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/ocsp.dockerfile
+        build-args: |
+          BASE_IMAGE=alpine:3.14
+        tags: |
+          lamassuiot/lamassu-ocsp:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassu-ocsp:latest
+        push: true
 
   build_cloud_proxy_docker_image:
-      name: Cloud Proxy - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    name: Cloud Proxy - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+    - tag_generator
+    steps:
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Cloud Proxy docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/cloud-proxy.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-cloud-proxy:${{ github.sha }}
-            lamassuiot/lamassu-cloud-proxy:latest
-          push: true
+    - name: Build Cloud Proxy docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/cloud-proxy.dockerfile 
+        build-args: |
+          BASE_IMAGE=alpine:3.14
+        tags: |
+          lamassuiot/lamassu-cloud-proxy:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassu-cloud-proxy:latest
+        push: true
 
   build_lamassu_db_docker_image:
-      name: DB - Release docker images
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    name: DB - Release docker images
+    runs-on: ubuntu-latest
+    needs:
+    - tag_generator
+    steps:
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DB docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/lamassu-db.dockerfile 
-          tags: |
-            lamassuiot/lamassu-db:${{ github.sha }}
-            lamassuiot/lamassu-db:latest
-          push: true
+    - name: Build DB docker image
+      uses: docker/build-push-action@v2
+      with:
+        file: ci/lamassu-db.dockerfile 
+        tags: |
+          lamassuiot/lamassu-db:${{ needs.tag_generator.outputs.new-tag }}
+          lamassuiot/lamassu-db:latest
+        push: true
